- added shortcut keys to button tooltips - fixed the out-of-range button focus rings on Firefox
git-svn-id: https://mooeditable.googlecode.com/svn/trunk@21 87529a62-bb3e-0410-b0c7-e53ae835acad

--- a/MooEditable.css
+++ b/MooEditable.css
@@ -24,6 +24,7 @@
 	background-color: transparent;
 	background-repeat: no-repeat;
 	background-position: 4px 4px;
+	overflow: hidden;
 }
 
 .mooeditable-toolbar .toolbar-button:hover,
